--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/API Riot.png" />
+                        <img src="images/api_riot.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
