--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                         <p>
                            Requêtes à l'API de league of legends afin de constituer une base de données des parties récentes d'un joueur et toutes les informations concernant sa performance. Puis mise en place de visualisation de données de la performance. Ce projet est codé en Python et les données seront stockées dans un serveur PostgreSQL. 
                         </p>
-                        <a href="https://github.com/Hqste/portfolio/blob/main/API%20Riot%20Analyse%20de%20perf.py">Acceder au code python sur mon github (Partie SQL non terminée)</a> <br>
+                        <a href="https://github.com/Hqste/api_riot_games">Acceder au code python sur mon github (Partie SQL non terminée)</a> <br>
                         <a href="lol projet.pdf">Télécharger le pdf donnant le code + graphiques</a>
                     </div>
                     <!-- End .project-info -->
